# NAMELightCube

./: BinaryCollisionApproximation.py  README.md
Firmware/: CMakeLists.txt
Firmware/CubeBitBanging/: CMakeLists.txt  CubeBitBanging.c
Firmware/CubeBitBangingCommMulticore/: CMakeLists.txt  CubeBitBangingCommMulticore.c
Firmware/MultiCubeController/: CMakeLists.txt  MultiCubeController.c
Firmware/helloworld/: CMakeLists.txt  helloworld.c
Graphics/: BCA_multicube.py  BCA_multicube3D.py  BCA_multicubeKeys.py  BCA_multicubeMattV2.py  BCA_multicubeNumPad3D.py  BCA_multicubeNumPad3DV2.py  BCA_multicubeNumpadFlat.py  BCA_multicubeScriptBlender.py  BCA_multicubeScripts.py  BCA_multicube_Matt.py  BCA_singlecube.py  BinaryCollisionApproximation.py  BinaryCollisionApproximation3DLED.py  BinaryCollisionApproximationMulitProcessing.py  CommTest.py  ElementImagePositions.txt  EventBasedCubeUpdate(1).py  EventBasedCubeUpdate.py  GenWaveTest.m  GenWaveTestV2.m  SiPure.py  SpeedTest.py  lightCubeUtil.py  pixelFont.py  testBlue.py  testGreen.py  testRed.py  testWhite.py  wave_animation.xlsx
LED Bending Jig/: Arm1.stl  Arm2.stl  Base+Jig.stl  Bending Jig V2 Internal Support 0.15mm spacing v2.stl  Bending Jig V2 Internal Support v4.stl  LED bending Jig.scad
